team/output/BD_444_459_489/329/2/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_444_456_489.py", line 53
    as = lines.map(lambda urls: parseNeighbors(urls)).distinct().groupByKey().mapValues(sum).cache()
     ^
SyntaxError: invalid syntax
